modified:   cluster.yml 	modified:   fdisk.yml 	modified:   group_vars/all.yml 	modified:   inventory 	modified:   roles/cert/tasks/main.yml 	modified:   roles/cni-plugins/tasks/main.yml 	new file:   roles/cni-plugins/templates/cni-default.conf.j2 	new file:   roles/container-runtime/handlers/main.yml 	renamed:    roles/containerd/tasks/main.yml -> roles/container-runtime/tasks/containerd.yml 	new file:   roles/container-runtime/tasks/docker.yml 	new file:   roles/container-runtime/tasks/main.yml 	renamed:    roles/containerd/templates/config.toml.j2 -> roles/container-runtime/templates/config.toml.j2 	new file:   roles/container-runtime/templates/daemon.json.j2 	new file:   roles/container-runtime/vars/ubuntu.yml 	deleted:    roles/containerd/handlers/main.yml 	modified:   roles/keepalived/templates/keepalived.conf.j2 	modified:   roles/master/tasks/main.yml 	modified:   roles/master/templates/admin.kubeconfig.j2 	modified:   roles/master/templates/kube-apiserver.conf.j2 	modified:   roles/worker/tasks/main.yml 	modified:   roles/worker/templates/10-kubelet.conf.j2 	modified:   roles/worker/templates/kubelet.service.j2

--- a/cluster.yml
+++ b/cluster.yml
@@ -41,10 +41,10 @@
 - name: "Set Worker Nodes"
   hosts: master worker
   roles:
-    - role: containerd
-      tags: containerd
-    - role: cri-tools
-      tags: cri-tools
+    - role: container-runtime
+      tags: container-runtime
+#    - role: cri-tools
+#      tags: cri-tools
     - role: cni-plugins
       tags: cni-plugins
     - role: worker
