--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -10,7 +10,7 @@ etcd:
   # etcd 版本
   version: 3.4.13
   # etcd 数据目录
-  data_dir: "/var/lib/etcd"
+  data_dir: "/data/kubernetes/etcd"
 
 # High Availability
 # kube-apiserver负载均衡的信息
@@ -19,8 +19,9 @@ etcd:
 # 如使用域名，需提前配置解析。不使用域名时，请注释掉
 # 如使用haproxy + keepalived ，并且跟master节点部署在一起时，请修改port以避免端口冲突
 loadbalance:
-  ip: 172.16.90.200
-  port: 6443
+  ip: 192.168.199.254
+  netmask: 24
+  port: 9443
   #domain_name: apiserver.k8sre.com
 
 # Kubernetes
@@ -29,17 +30,30 @@ kubernetes:
   # 如使用自建文件服务器，请保证下载路径为:http://xxx.xxx.xxx/v1.21.2/bin/linux/amd64/kube-apiserver。
   download_url: https://kubernetes.oss-cn-hangzhou.aliyuncs.com/kubernetes-release/release
   # kubernetes 版本
-  version: v1.21.2
+  version: v1.18.12
   # 集群Pod网段
-  podSubnet: 10.64.0.0/12
+  podSubnet: 10.60.0.0/16
   # 集群Service网段
   serviceSubnet: 10.80.0.0/16
   # kubelet 数据目录
-  kubelet_dir: "/var/lib/kubelet"
+  kubelet_dir: "/data/kubernetes/kubelet"
   # cni-plugins: https://github.com/containernetworking/plugins
   cni_plugins_version: v0.8.7
+  # 集群管理员
+  admin: wx-k8s-admin
+  
 
-# Containerd
+# Container-runtime
+container_runtime: docker
+docker:
+  # docker 版本
+  version: 19.03.9
+  ubuntuversion: 5:19.03.9~3-0~ubuntu-focal
+  # docker 数据目录
+  root: "/data/kubernetes/docker"
+  confdir: "/etc/docker"
+  # docker 国内镜像地址
+  registry_mirrors: "https://l0z7rpjj.mirror.aliyuncs.com"
 critools:
   version: v1.21.0
 containerd:
@@ -83,7 +97,7 @@ cilium:
 # Addons
 dns:
   coredns_version: 1.8.0
-  enable_nodelocaldns: false
+  enable_nodelocaldns: true
   nodelocaldns_version: 1.17.0
   nodelocaldns_ip: 169.254.20.10
 metrics_server:
