--- a/roles/cni-plugins/tasks/main.yml
+++ b/roles/cni-plugins/tasks/main.yml
@@ -1,11 +1,14 @@
 ---
 - name: "Create cni-plugins directory"
   file:
-    path: "/opt/cni/bin/"
+    path: "{{ item }}"
     owner: root
     group: root
     mode: 0755
     state: directory
+  with_items:
+    - "/opt/cni/bin/"
+    - "/etc/cni/net.d/"
   tags: dir
 
 - name: Get cni-plugins
@@ -18,3 +21,11 @@
     src: "/tmp/cni-plugins-linux-amd64-{{kubernetes.cni_plugins_version}}.tgz"
     dest: /opt/cni/bin/
     remote_src: yes
+
+- name: "拷贝cni-plugins 配置文件到/etc/cni/net.d"
+  template:
+    src: "cni-default.conf.j2"
+    dest: "/etc/cni/net.d/cni-default.conf"
+    owner: root
+    group: root
+    mode: 0644
