--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -26,16 +26,34 @@
     - {line: "{{ kubernetes.kubelet_dir }}"}
   tags: dir
 
-- name: "Install worker node"
+- name: "判断kubelet二进制文件是否存在"
+  shell: which kubelet
+  ignore_errors: true
+  register: kubelet_ready
+
+- name: "Install kubelet"
+  when: kubelet_ready.rc != 0
   get_url:
-    url: "{{ item.line }}"
+    url: "https://kubernetes.oss-cn-hangzhou.aliyuncs.com/kubernetes-release/release/{{ kubernetes.version  }}/bin/linux/amd64/kubelet"
     dest: /usr/bin/
     owner: root
     group: root
     mode: 0750
-  with_items:
-    - { line: "{{ kubernetes.download_url }}/{{ kubernetes.version }}/bin/linux/amd64/kubelet"}
-    - { line: "{{ kubernetes.download_url }}/{{ kubernetes.version }}/bin/linux/amd64/kube-proxy"}
+  tags: install_worker
+
+- name: "判断kube-proxy二进制文件是否存在"
+  shell: which kube-proxy
+  ignore_errors: true
+  register: kube_proxy_ready
+
+- name: "Install kube-proxy"
+  when: kube_proxy_ready.rc != 0
+  get_url:
+    url: "https://kubernetes.oss-cn-hangzhou.aliyuncs.com/kubernetes-release/release/{{ kubernetes.version  }}/bin/linux/amd64/kube-proxy"
+    dest: /usr/bin/
+    owner: root
+    group: root
+    mode: 0750
   tags: install_worker
 
 - name: "Distribution worker certs"
