modified:   cluster.yml 	modified:   group_vars/all.yml 	new file:   roles/addons/tasks/helm.yml 	new file:   roles/addons/tasks/ingress.yml 	modified:   roles/addons/tasks/main.yml 	new file:   roles/addons/templates/ingress-configmap.yaml.j2 	new file:   roles/addons/templates/ingress.yaml.j2 	modified:   roles/init/files/chrony.conf 	modified:   roles/master/templates/kube-apiserver.conf.j2 	modified:   roles/network-plugins/tasks/calico.yml 	modified:   roles/purge/tasks/main.yml 	modified:   roles/worker/templates/10-kubelet.conf.j2 	modified:   roles/worker/templates/kubelet.conf.j2

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -41,6 +41,8 @@ kubernetes:
   cni_plugins_version: v0.8.7
   # 集群管理员
   admin: wx-k8s-admin
+  # pause镜像地址
+  pod_infraimage: registry.cn-hangzhou.aliyuncs.com/qcloud-gcr/pause-amd64:3.2
   
 
 # Container-runtime
