--- a/roles/init/files/chrony.conf
+++ b/roles/init/files/chrony.conf
@@ -1,6 +1,6 @@
-server ntp.cloud.aliyuncs.com minpoll 4 maxpoll 10 iburst
-server ntp.aliyun.com minpoll 4 maxpoll 10 iburst
-server ntp1.aliyun.com minpoll 4 maxpoll 10 iburst
+server 192.168.199.1 minpoll 4 maxpoll 10 iburst
+server 192.168.198.1 minpoll 4 maxpoll 10 iburst
+server 192.168.9.1 minpoll 4 maxpoll 10 iburst
 server ntp1.cloud.aliyuncs.com minpoll 4 maxpoll 10 iburst
 server ntp10.cloud.aliyuncs.com minpoll 4 maxpoll 10 iburst
 server ntp11.cloud.aliyuncs.com minpoll 4 maxpoll 10 iburst
