modified:   cluster.yml 	modified:   group_vars/all.yml 	modified:   roles/addons/templates/ingress.yaml.j2 	modified:   roles/cni-plugins/tasks/main.yml 	modified:   roles/container-runtime/handlers/main.yml 	modified:   roles/container-runtime/tasks/docker.yml 	modified:   roles/network-plugins/tasks/calico.yml 	modified:   roles/worker/tasks/main.yml 	modified:   roles/worker/templates/10-kubelet.conf.j2 	modified:   roles/worker/templates/kubelet.service.j2

--- a/cluster.yml
+++ b/cluster.yml
@@ -1,9 +1,9 @@
 ---
-- name: "删除集群"
-  hosts: haproxy etcd master worker
-  roles:
-    - role: purge
-      tags: purge
+#- name: "删除集群"
+#  hosts: haproxy etcd master worker
+#  roles:
+#    - role: purge
+#      tags: purge
 
 - name: "Verify Settings"
   hosts: haproxy etcd master worker
