--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -42,7 +42,7 @@ kubernetes:
   # 集群管理员
   admin: wx-k8s-admin
   # pause镜像地址
-  pod_infraimage: registry.cn-hangzhou.aliyuncs.com/qcloud-gcr/pause-amd64:3.2
+  pod_infraimage: registry.cn-hangzhou.aliyuncs.com/qcloud-gcr/pause:3.2
   
 
 # Container-runtime
@@ -104,3 +104,8 @@ dns:
   nodelocaldns_ip: 169.254.20.10
 metrics_server:
   version: v0.4.1
+helm:
+  helm_version: v3.6.0
+ingress:
+  ingress_version: v0.40.0
+  webhook_version: v1.5.1
