--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -119,7 +119,7 @@
     dest: "{{ item.dest }}"
   with_items:
     - {src: "kubelet.conf.j2",dest: "/etc/kubernetes/kubelet.conf" }
-    - {src: "10-kubelet.conf.j2",dest: "/etc/sysconfig/kubelet" }
+    - {src: "10-kubelet.conf.j2",dest: "/etc/kubernetes/kubelet" }
     - {src: "kube-proxy.conf.j2",dest: "/etc/kubernetes/kube-proxy.conf" }
   tags: dis_worker_config
 
