--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -34,7 +34,7 @@
 - name: "Install kubelet"
   when: kubelet_ready.rc != 0
   get_url:
-    url: "https://kubernetes.oss-cn-hangzhou.aliyuncs.com/kubernetes-release/release/{{ kubernetes.version  }}/bin/linux/amd64/kubelet"
+    url: "{{ kubernetes.download_url }}/{{ kubernetes.version  }}/bin/linux/amd64/kubelet"
     dest: /usr/bin/
     owner: root
     group: root
@@ -49,7 +49,7 @@
 - name: "Install kube-proxy"
   when: kube_proxy_ready.rc != 0
   get_url:
-    url: "https://kubernetes.oss-cn-hangzhou.aliyuncs.com/kubernetes-release/release/{{ kubernetes.version  }}/bin/linux/amd64/kube-proxy"
+    url: "{{ kubernetes.download_url }}/{{ kubernetes.version  }}/bin/linux/amd64/kube-proxy"
     dest: /usr/bin/
     owner: root
     group: root
@@ -218,6 +218,20 @@
     delay: 5
     sleep: 2
   tags: healthcheck
+
+- name: "暂停1分钟"
+  pause: minutes=1
+
+- name: "获取Pending状态的csr"
+  shell: kubectl get csr| grep Pending | awk '{print $1}'|tr '\n' ' '
+  ignore_errors: true
+  register: approve_csr
+
+- name: "approve csr"
+  shell: kubectl certificate approve {{ approve_csr.stdout }}
+  ignore_errors: true
+  delegate_to: "{{ groups['master'][0] }}"
+  run_once: true
 
 - name: "kubelet health check"
   uri:
